--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,3 +1,7 @@
 compile.on.save=true
+do.depend=false
+do.jar=true
+javac.debug=true
+javadoc.preview=true
 user.properties.file=C:\\Users\\S ARUNA\\AppData\\Roaming\\NetBeans\\7.3.1\\build.properties
 axis2.deploy.war=C:\\Users\\S ARUNA\\Final_year_project\\axis2.war
